@@ -1,3 +1,8 @@
+Tue May 30 10:33:13 2000  Raph Levien  <raph@acm.org>
+
+	* art_svp_render_aa.c (art_svp_render_aa_iter_step): Fixed not
+	updating iter->steps when steps gets reallocated.
+
 2000-05-30  Pavel Cisler <pavel@eazel.com>
 
 	* art_rgba.c:
